src/test/deca/syntax/valid/created/affichage/print_INT.deca
// Description:
//      Affiche entier
// Resultats :
// 		OK

{
    println(3);
}
