src/test/deca/syntax/invalid/created/miss_element/no_semi.deca
// Description:
//		Instruction manque ; final
// Resultats:
//		Erreur de syntaxe Ligne 8 : missing ';' at '}'

{
	println()
}
